added item per unit 1

--- a/addDataPage.html
+++ b/addDataPage.html
@@ -43,6 +43,7 @@ let price=$("#price");
 let actualprice=$("#actualprice");
 let qty=$("#qty");
 let itmPrUnit = $("#itmPrUnit");
+itmPrUnit.value = "1";
 let ctrId=$("#ctrId");
 function reset(flds){
   for(i in flds){
