--- a/home.html
+++ b/home.html
@@ -18,4 +18,5 @@ box-shadow:3px 3px 7px black;
 <li><a href="adddata">Add Data</a></li>
 <li><a href="seealldata">Show Data</a></li>
 <li><a href="sell">Sell</a></li>
+<li><a href="salesData">Sales Data</a></li>
 </ul>
