--- a/sell.html
+++ b/sell.html
@@ -23,7 +23,7 @@ table{
   margin-top:40px;
   margin-left:auto;
   margin-right:auto;
-  box-shadow:0px 0px 7px lightgreen;
+  box-shadow:10px 10px 20px black;
 }
 table td{
 }
