added api for doing sales

--- a/sell.html
+++ b/sell.html
@@ -290,4 +290,10 @@ function changeTotalValue(discountDropDown,qtyFld,price,discountValueTd,totalAft
 	}
 }
 
+function sell(name, brand, price, actualprice, sale_type,qty_sold,discount,net_charged) {
+	return function() {
+		
+	};
+}
+
 </script>
