--- a/sales.html
+++ b/sales.html
@@ -10,6 +10,10 @@ table{
   box-shadow:10px 10px 20px black;
   font-size:12px;
 }
+table tr:nth-child(1) {
+color:green;
+font-weight:bold;
+}
 table tr:nth-child(odd) {
   background-color:khaki;
 }
