--- a/seeAllData.html
+++ b/seeAllData.html
@@ -11,6 +11,10 @@ table{
 }
 table td{
 }
+table tr:nth-child(1) {
+color:green;
+font-weight:bold;
+}
 table tr:nth-child(odd) {
   background-color:khaki;
 }
