--- a/sell.html
+++ b/sell.html
@@ -16,6 +16,9 @@ width:100%;
 #medicineName {
   width:100%;
 }
+table tr:nth-child(odd) {
+background-color:lightblue;
+}
 table{
   border-collapse:collapse;
   table-layout: fixed;
