--- a/seeAllData.html
+++ b/seeAllData.html
@@ -11,12 +11,17 @@ table{
 }
 table td{
 }
-table tr:nth-child(1) {
-color:green;
-font-weight:bold;
+.lbl{
+font-size:12px;
+color:blue;
+display:block;
 }
-table tr:nth-child(odd) {
-  background-color:khaki;
+.odd {
+  background-color:lightblue;
+}
+td{
+padding-top:5px;
+padding-bottom:5px;
 }
 button{
 width:100%;
