added bootstrap css

--- a/sales.html
+++ b/sales.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="./bootstrap.min.css" rel="stylesheet">
 <style>
 table{
     border-collapse:collapse;
@@ -10,7 +11,10 @@ table{
   box-shadow:10px 10px 20px black;
   font-size:12px;
 }
-table tr:nth-child(1) {
+.table{
+width:90%;
+}
+/*table tr:nth-child(1) {
 color:green;
 font-weight:bold;
 }
@@ -18,7 +22,7 @@ table tr:nth-child(odd) {
   background-color:khaki;
 }
 table td{
-}
+}*/
 button{
 width:100%;
 height:30px;
@@ -30,7 +34,6 @@ box-shadow: 3px 3px solid gray;
 background-color: red;
 }
 </style>
-__TABLE__
 <table>
 <tr>
 <td>
@@ -38,7 +41,7 @@ __TABLE__
 </td>
 </tr>
 </table>
-
+__TABLE__
 <script>
 function gotohome(){
   window.location.href="/";
