--- a/seeAllData.html
+++ b/seeAllData.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="./bootstrap.min.css" rel="stylesheet">
 <style>
 table{
     border-collapse:collapse;
@@ -9,16 +10,14 @@ table{
   margin-right:auto;
   box-shadow:10px 10px 20px black;
 }
-table td{
-}
 .lbl{
 font-size:12px;
 color:blue;
 display:block;
 }
-.odd {
+/*.odd {
   background-color:lightblue;
-}
+}*/
 td{
 padding-top:5px;
 padding-bottom:5px;
@@ -30,11 +29,13 @@ border:none;
 color: white;
 box-shadow: 3px 3px solid gray;
 }
+.table{
+width:90%;
+}
 .home{
 background-color: red;
 }
 </style>
-__TABLE__
 <table>
 <tr>
 <td>
@@ -42,7 +43,7 @@ __TABLE__
 </td>
 </tr>
 </table>
-
+__TABLE__
 <script>
 function gotohome(){
   window.location.href="/";
