--- a/addDataPage.html
+++ b/addDataPage.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="./bootstrap.min.css" rel="stylesheet">
 <style>
 table{
   border-collapse:collapse;
@@ -7,6 +8,9 @@ table{
   margin-left:auto;
   margin-right:auto;
   box-shadow:10px 10px 20px black;
+}
+.table{
+width:420px;
 }
 select {
 width:100%;
@@ -31,7 +35,7 @@ background-color: blue;
 }
 </style>
 <p id="out"></p>
-<table>
+<table class="table table-dark">
 <tr><td colspan="2">__EXISTING_FILES__</td></tr>
 <tr><td>Medicine Name</td><td><input type="text" id="name"></td></tr>
 <tr><td>Brand</td><td><input type="text" id="brand"></td></tr>
