--- a/seeAllData.html
+++ b/seeAllData.html
@@ -15,9 +15,9 @@ font-size:12px;
 color:blue;
 display:block;
 }
-/*.odd {
-  background-color:lightblue;
-}*/
+.odd {
+  background-color:#253035;
+}
 td{
 padding-top:5px;
 padding-bottom:5px;
