--- a/home.html
+++ b/home.html
@@ -1,22 +1,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="./bootstrap.min.css" rel="stylesheet">
 <style>
 a,li{
 border:none;
-background-color:blue;
 color: white;
-box-shadow: 3px 3px solid gray;
-padding:20px 5px;
+width:100%;
 margin-top:20px;
-width:120px;
 text-decoration: none;
-border-radius:10px;
-box-shadow:3px 3px 7px black;
 }
-
+.table {
+width:400px;
+margin-left:auto;
+margin-right:auto;
+margin-top:50px;
+}
+a{
+margin-left:40%;
+}
 </style>
-<ul>
-<li><a href="adddata">Add Data</a></li>
-<li><a href="seealldata">Show Data</a></li>
-<li><a href="sell">Sell</a></li>
-<li><a href="salesData">Sales Data</a></li>
-</ul>
+<table class="table table-dark">
+<tr><td onclick="clickA('#adddata')"><a href="adddata" id="adddata">Add Data</a></td></tr>
+<tr><td onclick="clickA('#seealldata')"><a href="seealldata" id="seealldata">Show Data</a></td></tr>
+<tr><td onclick="clickA('#sell')"><a href="sell" id="sell">Sell</a></td></tr>
+<tr><td onclick="clickA('#salesData')"><a href="salesData" id="salesData">Sales Data</a></td></tr>
+</table>
+<script>
+function $(selector) {
+	return document.querySelector(selector);
+}
+function clickA(selector) {
+	$(selector).click();
+}
+</script>
